PLFM-9982 Build each SearchIndex slot from its source's as-built snapshot
The build holds a non-exclusive lock on the source from reading its snapshot through the end of row streaming. The source schema (including 'select *' expansion and column types) and the spliced benefactor columns come from the source snapshot. The SearchIndex snapshot is written into the idle slot's mapping _meta at create time, before the alias swap. A source without a snapshot is retried, and a source whose closure includes AGGREGATE_DATA fails the build. The entity is no longer rebound after the swap.